src/objects/Deal__c.object
<CustomObject>
    <description>Unit Deal on Customer Order</description>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <formula>ROUND((Deal_Total__c + F_I_Total__c + F_I_Tax_Total__c - Down_Payment__c), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_For_DP360_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For DP360 Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co Buyer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Customer Order</description>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Sale_Date__c</fullName>
        <label>Confirmed Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DP360_Lead_Id__c</fullName>
        <label>DP360 Lead Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP360_Lead_URL__c</fullName>
        <formula>IF( NOT(ISBLANK(DP360_Lead_Id__c)), &apos;https://app.dp360crm.com/leads_main?limit=10&amp;page=1#lead&apos; &amp;  DP360_Lead_Id__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DP360 Lead URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP360_Sync_Response__c</fullName>
        <label>DP360 Sync Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Commission__c</fullName>
        <label>Deal Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Section_Trade_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Section Trade Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Tax_Total__c</fullName>
        <label>Deal Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Total__c</fullName>
        <formula>Subtotal__c  +  Deal_Tax_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Delivery Date of deal</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <description>Down payment on deal</description>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_I_Tax_Total__c</fullName>
        <label>F I Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_I_Total__c</fullName>
        <label>F I Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Total__c</fullName>
        <label>Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy__c</fullName>
        <label>Insurance Policy#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Commit_And_Install_Action_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Commit And Install Action Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deal_Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deal Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tax_Based_On_Customer_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tax Based On Customer Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labour_Total__c</fullName>
        <label>Labour Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Total__c</fullName>
        <label>Lien Payout Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_For_Customer__c</fullName>
        <label>Notes For Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Option_Clearing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Option Clearing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Product_Total__c</fullName>
        <label>Other Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Total__c</fullName>
        <label>Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Fee_Total__c</fullName>
        <label>Pre Tax Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Labour_Total__c</fullName>
        <label>Pre Tax Labour Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Other_Product_Total__c</fullName>
        <label>Pre Tax Other Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Part_And_Labor_Total__c</fullName>
        <formula>Pre_Tax_Part_Total__c + Pre_Tax_Labour_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Part And Labor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Part_Total__c</fullName>
        <label>Pre Tax Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Trade_In_Total__c</fullName>
        <label>Pre Tax Trade In Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Unit_Price_And_Cost_Total__c</fullName>
        <label>Pre Tax Unit Price And Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Total__c</fullName>
        <label>Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Total__c</fullName>
        <label>Sales Tax Total In Tax On And Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesperson_Name__c</fullName>
        <formula>Salesperson_Names__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesperson Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson_Names__c</fullName>
        <inlineHelpText>Comma separated salesperson names</inlineHelpText>
        <label>Salesperson Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Salesperson</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Total__c</fullName>
        <label>Stamp Duty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of deal</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quotation</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stocked_Trades__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stocked Trades</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>Sublet_Total__c</fullName>
        <label>Sublet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Part_Total__c  +  Labour_Total__c  +  Fee_Total__c  +  Product_Total__c  +  Trade_In_Total__c  +  Unit_Price_And_Cost_Total__c +  Stamp_Duty_Total__c + Lien_Payout_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commission_Cost__c</fullName>
        <description>Total Commission cost - Populated after Deal Finalize</description>
        <label>Total Commission Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Product_Cost__c</fullName>
        <description>Total deal product cost - Populated after Deal Finalize</description>
        <label>Total Deal Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deposit_And_Payment__c</fullName>
        <label>Total Deposit And Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fee_Cost__c</fullName>
        <description>Total fee cost - Populated after Deal Finalize</description>
        <label>Total Fee Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Finance_Commission__c</fullName>
        <label>Total Finance Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Financing_Product_Cost__c</fullName>
        <description>Total financing product cost - Populated after Deal Finalize</description>
        <label>Total Financing Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Merch_Cost__c</fullName>
        <description>Total Merch cost - Populated after Deal Finalize</description>
        <label>Total Merch Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Part_Cost__c</fullName>
        <description>Total part cost - Populated after Deal Finalize</description>
        <label>Total Part Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sublet_Cost__c</fullName>
        <description>Total sublet cost - Populated after Deal Finalize</description>
        <label>Total Sublet Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Third_Party_Product_Cost__c</fullName>
        <description>Total third party product cost - Populated after Deal Finalize</description>
        <label>Total Third Party Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TradeIn_Cost__c</fullName>
        <description>Total TradeIn cost - Populate after Deal Finalize</description>
        <label>Total TradeIn Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unit_Cost__c</fullName>
        <description>Total unit cost - Populated after Deal Finalize</description>
        <label>Total Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Warranty_Product_Cost__c</fullName>
        <description>Total warrantyProductCost  cost - Populated after Deal Finalize</description>
        <label>Total Warranty Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Deal total</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In_Tax_Total__c</fullName>
        <label>Trade In Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In_Total__c</fullName>
        <label>Trade In Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ttoal_Labour_Cost__c</fullName>
        <description>Total Labour cost - Populated after Deal Finalize</description>
        <label>Ttoal Labour Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of deal</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Deal</fullName>
                </value>
                <value>
                    <fullName>Financed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price_And_Cost_Total__c</fullName>
        <label>Unit Price And Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Status__c</fullName>
        <label>Unit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Uncommitted</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Product_Total__c</fullName>
        <label>Warranty Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Withheld_F_I_Total__c</fullName>
        <label>Withheld F I Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reopen_Invoice_Created_Date__c</fullName>
        <label>Reopen Invoice Created Date</label>
        <type>DateTime</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>